@@ -5,14 +5,16 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import vn.edu.hcmute.utecare.dto.request.EMGRequest;
 import vn.edu.hcmute.utecare.dto.response.EMGResponse;
 import vn.edu.hcmute.utecare.dto.response.PageResponse;
-import vn.edu.hcmute.utecare.exception.NotFoundException;
+import vn.edu.hcmute.utecare.exception.ResourceNotFoundException;
 import vn.edu.hcmute.utecare.mapper.EMGMapper;
 import vn.edu.hcmute.utecare.model.EMG;
 import vn.edu.hcmute.utecare.model.Encounter;
 import vn.edu.hcmute.utecare.repository.EMGRepository;
+import vn.edu.hcmute.utecare.repository.EncounterRepository;
 import vn.edu.hcmute.utecare.service.EMGService;
 import vn.edu.hcmute.utecare.util.PaginationUtil;
 import vn.edu.hcmute.utecare.util.enumeration.EMedicalTest;
@@ -20,7 +22,6 @@ import vn.edu.hcmute.utecare.util.enumeration.EMedicalTest;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,112 +29,111 @@ import java.util.stream.Collectors;
 public class EMGServiceImpl implements EMGService {
 
     private final EMGRepository emgRepository;
+    private final EncounterRepository encounterRepository;
+    private final EMGMapper emgMapper;
 
     @Override
+    @Transactional
     public EMGResponse createEMG(EMGRequest request) {
-        log.info("Tạo EMG mới: {}", request);
-
-        EMG emg = EMGMapper.INSTANCE.toEntity(request);
-
-        Encounter encounter = new Encounter();
-        encounter.setId(request.getEncounterId());
+        log.info("Tạo xét nghiệm EMG mới: {}", request);
+        Encounter encounter = encounterRepository.findById(request.getEncounterId())
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy cuộc gặp với ID: " + request.getEncounterId()));
+        EMG emg = emgMapper.toEntity(request);
         emg.setEncounter(encounter);
-        emg.setEvaluate(request.getEvaluate());
-        emg.setNotes(request.getNotes());
-        emg.setTestName(request.getTestName());
-        emg.setOrganSystem(request.getOrganSystem());
-        emg.setIsInvasive(request.getIsInvasive());
-        emg.setIsQuantitative(request.getIsQuantitative());
-        emg.setRecordDuration(request.getRecordDuration());
-        emg.setImage(request.getImage());
-
-        emg.setMuscleGroup(request.getMuscleGroup());
         emg.setStatus(EMedicalTest.PENDING);
         EMG saved = emgRepository.save(emg);
-
-        return EMGMapper.INSTANCE.toResponse(saved);
+        log.info("Tạo xét nghiệm EMG thành công với ID: {}", saved.getId());
+        return emgMapper.toResponse(saved);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public EMGResponse getEMGById(Long id) {
-        log.info("Lấy thông tin EMG với id: {}", id);
+        log.info("Truy xuất xét nghiệm EMG với ID: {}", id);
         EMG emg = emgRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Không tìm thấy EMG với id: " + id));
-        return EMGMapper.INSTANCE.toResponse(emg);
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy xét nghiệm EMG với ID: " + id));
+        log.info("Truy xuất xét nghiệm EMG thành công với ID: {}", id);
+        return emgMapper.toResponse(emg);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<EMGResponse> getAll() {
-        log.info("Lấy danh sách tất cả EMG");
+        log.info("Truy xuất danh sách tất cả xét nghiệm EMG");
         return emgRepository.findAll().stream()
-                .map(EMGMapper.INSTANCE::toResponse)
-                .collect(Collectors.toList());
+                .map(emgMapper::toResponse)
+                .toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public PageResponse<EMGResponse> getAll(int page, int size, String sort, String direction) {
-        log.info("Lấy danh sách EMG với phân trang: page={}, size={}, sort={}, direction={}", page, size, sort, direction);
+        log.info("Truy xuất danh sách EMG: trang={}, kích thước={}, sắp xếp={}, hướng={}", page, size, sort, direction);
         Pageable pageable = PaginationUtil.createPageable(page, size, sort, direction);
         Page<EMG> emgPage = emgRepository.findAll(pageable);
-
         return PageResponse.<EMGResponse>builder()
                 .currentPage(page)
                 .pageSize(size)
                 .totalPages(emgPage.getTotalPages())
                 .totalElements(emgPage.getTotalElements())
                 .content(emgPage.getContent().stream()
-                        .map(EMGMapper.INSTANCE::toResponse)
+                        .map(emgMapper::toResponse)
                         .toList())
                 .build();
     }
 
     @Override
+    @Transactional
     public EMGResponse updateEMG(Long id, EMGRequest request) {
-        log.info("Cập nhật EMG với id: {}", id);
-
+        log.info("Cập nhật xét nghiệm EMG với ID: {} và thông tin: {}", id, request);
         EMG emg = emgRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Không tìm thấy EMG với id: " + id));
-
-        EMGMapper.INSTANCE.updateEntity(emg, request);
-
-        Encounter encounter = new Encounter();
-        encounter.setId(request.getEncounterId());
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy xét nghiệm EMG với ID: " + id));
+        Encounter encounter = encounterRepository.findById(request.getEncounterId())
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy cuộc gặp với ID: " + request.getEncounterId()));
+        emgMapper.updateEntity(emg, request);
         emg.setEncounter(encounter);
-
-        emgRepository.save(emg);
-        return EMGMapper.INSTANCE.toResponse(emg);
+        EMG updated = emgRepository.save(emg);
+        log.info("Cập nhật xét nghiệm EMG thành công với ID: {}", id);
+        return emgMapper.toResponse(updated);
     }
 
     @Override
+    @Transactional
     public void deleteEMG(Long id) {
-        log.info("Xóa EMG với id: {}", id);
+        log.info("Xóa xét nghiệm EMG với ID: {}", id);
         EMG emg = emgRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Không tìm thấy EMG với id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy xét nghiệm EMG với ID: " + id));
         emgRepository.delete(emg);
+        log.info("Xóa xét nghiệm EMG thành công với ID: {}", id);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<EMGResponse> getAllLabTestByDateAndStatus(LocalDate date, String status) {
-        log.info("Lấy danh sách EMG theo ngày {} và trạng thái PENDING", date);
-        LocalDateTime startOfDay = date.atStartOfDay(); // 00:00:00
-        LocalDateTime endOfDay = date.atTime(23, 59, 59); // 23:59:59
-        EMedicalTest statusEnum = EMedicalTest.valueOf(String.valueOf(status)); // statusString là "PENDING", "COMPLETED",...
-        return emgRepository.findByCreateDateBetweenAndStatus(startOfDay, endOfDay, statusEnum)
-                .stream()
-                .map(EMGMapper.INSTANCE::toResponse).toList();
+        log.info("Truy xuất danh sách EMG theo ngày: {} và trạng thái: {}", date, status);
+        try {
+            LocalDateTime startOfDay = date.atStartOfDay();
+            LocalDateTime endOfDay = date.atTime(23, 59, 59);
+            EMedicalTest statusEnum = EMedicalTest.valueOf(status);
+            return emgRepository.findByCreateDateBetweenAndStatus(startOfDay, endOfDay, statusEnum)
+                    .stream()
+                    .map(emgMapper::toResponse)
+                    .toList();
+        } catch (IllegalArgumentException e) {
+            throw new ResourceNotFoundException("Trạng thái xét nghiệm không hợp lệ: " + status);
+        }
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<EMGResponse> getEncounterIdAndDate(Long encounterId, LocalDate date) {
-        log.info("Lấy danh sách EMG theo encounterId {} và ngày {}", encounterId, date);
+        log.info("Truy xuất danh sách EMG theo cuộc gặp ID: {} và ngày: {}", encounterId, date);
         LocalDate queryDate = (date != null) ? date : LocalDate.now();
-        LocalDateTime startOfDay = queryDate.atStartOfDay(); // 00:00:00
-        LocalDateTime endOfDay = queryDate.atTime(23, 59, 59); // 23:59:59
+        LocalDateTime startOfDay = queryDate.atStartOfDay();
+        LocalDateTime endOfDay = queryDate.atTime(23, 59, 59);
         return emgRepository.findByEncounterIdAndCreateDateBetween(encounterId, startOfDay, endOfDay)
                 .stream()
-                .map(EMGMapper.INSTANCE::toResponse)
+                .map(emgMapper::toResponse)
                 .toList();
     }
-
-
 }
